@@ -15,7 +15,7 @@ The <command>setup.exe</command> installer is designed to be easy
 for new users to understand while remaining flexible for the 
 experienced. The volunteer development team is constantly working
 on <command>setup.exe</command>; before requesting a new feature,
-check the wishlist in the <ulink url="http://sources.redhat.com/cgi-bin/cvsweb.cgi/setup/README?cvsroot=cygwin-apps&amp;rev=2">CVS <literal>README</literal>
+check the wishlist in the <ulink url="http://sourceware.org/cgi-bin/cvsweb.cgi/setup/README?cvsroot=cygwin-apps&amp;rev=2">CVS <literal>README</literal>
 </ulink>. It may already be present in the CVS version!
 </para>
 
@@ -144,7 +144,7 @@ small text file called <literal>setup.bz2</literal> that contains a list
 of packages available from that site along with some basic information about
 each package which <command>setup.exe</command> parses and uses to create the 
 chooser window. For details about the format of this file, see 
-the <ulink url="http://sources.redhat.com/cygwin-apps/setup.html">
+the <ulink url="http://sourceware.org/cygwin-apps/setup.html">
 setup.exe homepage</ulink>.
 </para>
 <para>
